[ARMv7] Fix WasmAddress testb3 https://bugs.webkit.org/show_bug.cgi?id=283938

Reviewed by Yusuke Suzuki.

For now, WasmAddress is only being used by testb3. In the future,
we may want to pin a register on armv7 too, and it was really easy
to make this work, so we just went ahead and did it.

We also comment out some testb3 cases on armv7 using Check, which we aren't
planning to support (until it gets used in WASM).

* Source/JavaScriptCore/b3/B3LowerInt64.cpp:
* Source/JavaScriptCore/b3/B3LowerToAir32_64.cpp:
* Source/JavaScriptCore/b3/B3WasmAddressValue.cpp:
(JSC::B3::WasmAddressValue::WasmAddressValue):
* Source/JavaScriptCore/b3/air/AirCustom.cpp:
(JSC::B3::Air::WasmBoundsCheckCustom::generate):
* Source/JavaScriptCore/b3/air/AirCustom.h:
(JSC::B3::Air::WasmBoundsCheckCustom::forEachArg):
* Source/JavaScriptCore/b3/testb3_1.cpp:
(run):
* Source/JavaScriptCore/b3/testb3_3.cpp:
(addShrTests):
* Source/JavaScriptCore/b3/testb3_6.cpp:
(testLateRegister):
* Source/JavaScriptCore/b3/testb3_7.cpp:
(testPinRegisters):
* Source/JavaScriptCore/b3/testb3_8.cpp:
(testWasmAddressDoesNotCSE):
(testStoreAfterClobberDifferentWidth):
(testStoreAfterClobberDifferentWidthSuccessor):
(testStoreAfterClobberExitsSidewaysSuccessor):
* Source/JavaScriptCore/b3/testb3_failingArmV7Tests.inc:

Canonical link: https://commits.webkit.org/288153@main