Source/JavaScriptCore/b3/air/AirCustom.cpp
@@ -219,7 +219,7 @@ bool WasmBoundsCheckCustom::isValidForm(Inst& inst)
 MacroAssembler::Jump WasmBoundsCheckCustom::generate(Inst& inst, CCallHelpers& jit, GenerationContext& context)
 {
     WasmBoundsCheckValue* value = inst.origin->as<WasmBoundsCheckValue>();
-    MacroAssembler::Jump outOfBounds = Inst(Air::Branch64, value, Arg::relCond(MacroAssembler::AboveOrEqual), inst.args[0], inst.args[1]).generate(jit, context);
+    MacroAssembler::Jump outOfBounds = Inst((is32Bit() ? Air::Branch32 : Air::Branch64), value, Arg::relCond(MacroAssembler::AboveOrEqual), inst.args[0], inst.args[1]).generate(jit, context);
 
     context.latePaths.append(createSharedTask<GenerationContext::LatePathFunction>(
         [outOfBounds, value] (CCallHelpers& jit, Air::GenerationContext& context) {
