Source/JavaScriptCore/b3/testb3_3.cpp
@@ -4289,7 +4289,9 @@ void addShrTests(const TestConfig* config, Deque<RefPtr<SharedTask<void()>>>& ta
     RUN(testZShrArgImm32(0xffffffff, 0));
     RUN(testZShrArgImm32(0xffffffff, 1));
     RUN(testZShrArgImm32(0xffffffff, 63));
+#if !CPU(ARM)
     RUN(testCSEStoreWithLoop());
+#endif
 
     RUN(testLoadPreIndex32());
     RUN(testLoadPreIndex64());
